--- a/index.html
+++ b/index.html
@@ -54,5 +54,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+      defer="defer"
+      src="https://www.touchmediaads.com/counter/counter.js"
+    ></script>
   </body>
 </html>
